--- a/index.html
+++ b/index.html
@@ -14,18 +14,31 @@
     <!-- Personal Details -->
     <table width="900" border="1" bordercolor="SteelBlue" cellpadding="5" align="center">
         <tr align="center">
-            <td colspan="2">
+            <td colspan="3">
                 <font size="7" face="Baskerville" color="Blue">Resume</font>
             </td>
         </tr>
-        <tr>
-            <td>
-                Ananta Singh
-                Address
+        <tr bgcolor="lightgrey">
+            <td colspan="3">
+                <font size="4" face="Baskerville" color="green">Personal Details</font>
             </td>
-            <td> Photo 
+        </tr>
+        <td width="150">
+            <b> Ananta Singh </b> <br>
+            <b> Address</b> <br>
+            <b>Email address</b> <br>
+            <b>Phone number</b> <br>
+        </td>
+        <td width="500">
+            <br>
+            IP Extension, Delhi 110092. <br>
+            aanantasingh@gmail.com <br>
+            8879771727 <br>
+        </td>
+        <td align="center"> 
+            <img src="profile pic.png" alt="Ananta" title="Ananta" width="130px">
 
-            </td>
+        </td>
         </tr>
 
     </table>
